--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<h1>Welcome to the <strong>eng-prof</strong> website</h1>    
+<h1>Welcome to the <strong>eng-prof</strong> website</h1>
+<p>Learning git is dope</p>
 </body>
 </html>
